# ctex_format

./: .gitignore  Cargo.toml  README.md
ctex_lib/: Cargo.toml  proposal.md
ctex_lib/src/: decode.rs  decoding.rs  encode.rs  encoding.rs  flags.rs  lib.rs  old.txt  par_tools.rs  par_util.rs  tests.rs  util.rs
ctex_lib/test/: test.ctex
ctex_tools/: Cargo.toml
ctex_tools/input/: README.md
ctex_tools/output/: README.md
ctex_tools/src/: main.rs
src/: decode.rs  encode.rs  lib.rs  main.rs
