[package]
name = "customimageencoder"
version = "0.1.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
flate2 = "1.0.20"
glob = "0.3.0"
rayon = "1.5.0"
image = "0.23.14"
