[package]
name = "ctex"
version = "0.1.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

[features]
par_tools = ["rayon", "glob"]

[dependencies]
lz4 = "1.23.2"
anyhow = "1.0.40"
image = "0.23.14"
glob = { version = "0.3.0", optional = true }
rayon = { version = "1.5.0", optional = true }
