[package]
name = "ctex"
version = "0.2.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

[features]
par_util = ["rayon", "glob"]
encode = ["image", "num-integer"]

[dependencies]
lz4_flex = "0.7.5"
anyhow = "1.0.40"
image = { version = "0.23.14", optional = true }
num-integer = { version = "0.1.44", optional = true }
rayon = { version = "1.5.0", optional = true }
glob = { version = "0.3.0", optional = true }