[package]
name = "ctex"
version = "0.3.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

[features]
encode_util = ["image"]
par_util = ["rayon", "image"]


[dependencies]
lz4_flex = "0.7.5"
anyhow = "1.0.40"
num-integer = "0.1.44"
glob = "0.3.0"
image = { version = "0.23.14", optional = true }
rayon = { version = "1.5.0", optional = true }