[package]
name = "ctex_tools"
version = "0.1.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctex = { path = "../ctex_lib", features = ["par_tools"] }
lz4 = "1.23.2"
glob = "0.3.0"
